--- a/Pipfile
+++ b/Pipfile
@@ -6,8 +6,11 @@ name = "pypi"
 [packages]
 httpx = "*"
 selectolax = "*"
+pymongo = "*"
+python-dotenv = "*"
 
 [dev-packages]
+ruff = "*"
 
 [requires]
 python_version = "3.10"
